feat: add a new section for the multipleSection div

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -87,6 +87,7 @@ ul.navBar {
 #multipleSection {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  max-width: 1000px;
 }
 
 .card {
