feat: add reload home page when pressing name at navbar

--- a/styles/main.css
+++ b/styles/main.css
@@ -55,6 +55,15 @@ ul.navBar {
   font-weight: bold;
 }
 
+#navBarName a {
+  text-decoration: none;
+  color: black;
+}
+
+#navBarName a:hover {
+  color: white;
+}
+
 /* Responsive design */
 @media (max-width: 768px) {
   .navBar li {
