feat: added link for the navbar and put it as absolute path to ensure it loads correctly

--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,10 +1,10 @@
 <!-- Navigation bar -->
 <ul class="navBar">
-  <li>about me</li>
-  <li>education</li>
-  <li>work</li>
-  <li>projects</li>
-  <li>blogs</li>
-  <li id="navBarName"><a href="index.html">irfan syafie</a></li>
+  <li><a href="#">about me</a></li>
+  <li><a href="/pages/education.html">education</a></li>
+  <li><a href="#">work</a></li>
+  <li><a href="#">projects</a></li>
+  <li><a href="#">blogs</a></li>
+  <li id="navBarName"><a href="../index.html">irfan syafie</a></li>
 </ul>
 <!-- End of navigation bar -->
