--- a/styles/main.css
+++ b/styles/main.css
@@ -46,22 +46,21 @@ ul.navBar {
 
 .navBar li:hover {
   background-color: var(--umber);
+}
+
+.navBar li a {
+  text-decoration: none;
+  color: black;
+  display: block;
+}
+
+.navBar li:hover a {
   color: white;
-  cursor: pointer;
 }
 
 #navBarName {
   float: right;
   font-weight: bold;
-}
-
-#navBarName a {
-  text-decoration: none;
-  color: black;
-}
-
-#navBarName a:hover {
-  color: white;
 }
 
 /* Responsive design */
