--- a/styles/pages/home.css
+++ b/styles/pages/home.css
@@ -27,6 +27,7 @@
   margin-left: 2rem;
 }
 
+/* Multiple section styling */
 #multipleSection {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -46,6 +47,12 @@
 
 .card:hover {
   transform: translateY(-5px);
+}
+
+a.cardLink {
+  text-decoration: none;
+  color: inherit;
+  display: block;
 }
 
 .sectionTitle {
