--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,8 +1,7 @@
 <!-- Navigation bar -->
 <ul class="navBar">
   <li><a href="#">about me</a></li>
-  <li><a href="/pages/education.html">education</a></li>
-  <li><a href="#">work</a></li>
+  <li><a href="/pages/work.html">work</a></li>
   <li><a href="#">projects</a></li>
   <li><a href="#">blogs</a></li>
   <li id="navBarName"><a href="../index.html">irfan syafie</a></li>
