feat: aded link to navBar for blogs section
- Added link for blog section on the multiple container section

--- a/components/navbar.html
+++ b/components/navbar.html
@@ -3,7 +3,7 @@
   <li><a href="#">about me</a></li>
   <li><a href="/pages/work.html">work</a></li>
   <li><a href="#">projects</a></li>
-  <li><a href="#">blogs</a></li>
+  <li><a href="/pages/blog.html">blogs</a></li>
   <li id="navBarName"><a href="../index.html">irfan syafie</a></li>
 </ul>
 <!-- End of navigation bar -->
