feat: Added new blog post with json data

--- a/components/navbar.html
+++ b/components/navbar.html
@@ -4,6 +4,6 @@
   <li><a href="/pages/work.html">work</a></li>
   <li><a href="#">projects</a></li>
   <li><a href="/pages/blog.html">blog</a></li>
-  <li id="navBarName"><a href="../index.html">irfan syafie</a></li>
+  <li id="navBarName"><a href="/">irfan syafie</a></li>
 </ul>
 <!-- End of navigation bar -->
