--- a/styles/pages/blog-post.css
+++ b/styles/pages/blog-post.css
@@ -24,3 +24,11 @@
 #blogContent p {
   margin-bottom: 1.5rem;
 }
+
+#blogContent img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 1rem auto;
+  border-radius: 8px;
+}
