--- a/styles/pages/blog-post.css
+++ b/styles/pages/blog-post.css
@@ -15,7 +15,7 @@
 
 /* Blog content size */
 #blogContent {
-  max-width: 550px;
+  max-width: 800px;
   margin: 0 auto;
   padding: 2rem 2rem;
   text-align: center;
@@ -23,11 +23,12 @@
 
 #blogContent p {
   margin-bottom: 1.5rem;
+  font-size: 1.5rem;
 }
 
 #blogContent img {
   max-width: 100%;
-  height: auto;
+  height: 80%;
   display: block;
   margin: 1rem auto;
   border-radius: 8px;
