--- a/styles/pages/blog-post.css
+++ b/styles/pages/blog-post.css
@@ -28,7 +28,7 @@
 
 #blogContent img {
   max-width: 100%;
-  height: 100%;
+  height: auto;
   display: block;
   margin: 1rem auto;
   border-radius: 8px;
