--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,6 +1,6 @@
 <!-- Navigation bar -->
 <ul class="navBar">
-  <li><a href="#">about me</a></li>
+  <li><a href="/pages/about-me.html">about me</a></li>
   <li><a href="/pages/work.html">work</a></li>
   <li><a href="#">projects</a></li>
   <li><a href="/pages/blog.html">blog</a></li>
