--- a/styles/main.css
+++ b/styles/main.css
@@ -13,15 +13,12 @@
   box-sizing: border-box;
 }
 
-html,
-body {
-  height: 100%;
-}
-
 body {
   line-height: 1.5;
   background-color: var(--linen);
   font-family: "Ubuntu", sans-serif;
+  min-height: 100vh;
+  padding-bottom: 1rem;
 }
 
 /* Navigation bar styling */
