--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,9 +1,11 @@
 <!-- Navigation bar -->
-<ul class="navBar">
-  <li><a href="/pages/about-me.html">about me</a></li>
-  <li><a href="/pages/work.html">work</a></li>
-  <li><a href="#">projects</a></li>
-  <li><a href="/pages/blog.html">blog</a></li>
-  <li id="navBarName"><a href="/">irfan syafie</a></li>
-</ul>
+<nav>
+  <ul class="navBar">
+    <li><a href="/pages/about-me.html">about me</a></li>
+    <li><a href="/pages/work.html">work</a></li>
+    <li><a href="#">projects</a></li>
+    <li><a href="/pages/blog.html">blog</a></li>
+    <li id="navBarName"><a href="/">irfan syafie</a></li>
+  </ul>
+</nav>
 <!-- End of navigation bar -->
