feat: complete projects page and refine portfolio styling

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -17,15 +17,7 @@
   </head>
   <body>
     <!-- Navigation bar -->
-    <nav>
-      <ul class="navBar">
-        <li><a href="/pages/about-me/">about me</a></li>
-        <li><a href="/pages/work/">work</a></li>
-        <li><a href="#">projects</a></li>
-        <li><a href="/pages/blog/">blog</a></li>
-        <li id="navBarName"><a href="/">irfan syafie</a></li>
-      </ul>
-    </nav>
+    {% include "components/navbar.html" %}
 
     <!-- Main Content -->
     <main>
