--- a/index.njk
+++ b/index.njk
@@ -38,23 +38,13 @@ pageStyle: /styles/pages/home.css
     </a>
   </div>
 
-  <!-- Work section -->
   <div class="card">
-    <a href="/pages/work/" class="cardLink">
-      <p class="sectionTitle">work</p>
+    <a href="/pages/projects/" class="cardLink">
+      <p class="sectionTitle">projects</p>
       <p>
-        Currently I'm doing my internship at a fintech company. But, I was
-        also a barista and mostly worked in FnB industry before focusing on
-        software work.
+        I have done some small projects during my free and uni time. Feel free
+        to look over my projects here.
       </p>
     </a>
-  </div>
-
-  <div class="card">
-    <p class="sectionTitle">projects</p>
-    <p>
-      I have done some small projects during my free and uni time. Feel free
-      to look over my projects here.
-    </p>
   </div>
 </div>
