--- a/pages/about-me.njk
+++ b/pages/about-me.njk
@@ -6,7 +6,7 @@ pageStyle: /styles/pages/about-me.css
 
 <h1 id="aboutMeTitle">
   a little bit <br />
-  about myself
+  about myself.
 </h1>
 
 <!-- About me content -->
