--- a/styles/pages/blog.css
+++ b/styles/pages/blog.css
@@ -19,12 +19,13 @@
   border: 1px solid;
   border-radius: 10px;
   box-shadow: 10px 10px 0 -5px;
-  transition: transform 0.2s ease, box-shadow 0.2s ease;
+  transition: transform 0.2s ease, background-color 0.2s ease, box-shadow 0.2s ease;
 }
 
 .blogPostsFile:hover {
   background-color: var(--timberwolf);
   transform: translateY(-5px);
+  box-shadow: 0px 0px 5px rgba(0,0,0,0.2); /* Softened shadow on hover */
 }
 
 /* Blog posts date */
