feat(styles): add reminderNote class for blog post styling

--- a/styles/pages/blog-post.css
+++ b/styles/pages/blog-post.css
@@ -33,6 +33,10 @@
   color: black;
 }
 
+.reminderNote {
+  font-weight: 500;
+}
+
 /* Scrapbook Photo Styling */
 .scrapbook-photo {
   max-width: 450px;
