fix: update blog post title to lowercase for consistency

--- a/pages/blog-posts/1.njk
+++ b/pages/blog-posts/1.njk
@@ -1,6 +1,6 @@
 ---
 layout: layouts/base.njk
-title: My First Week of Internship
+title: my first week of internship
 pageStyle: /styles/pages/blog-post.css
 ---
 
